v0.1.1 (unstable)
- Video library shortcuts are loaded from video library node files (test)
- Shortcuts with overriden images and override files are kept in memory to speed up listings
- Submenu shortcuts are now all loaded at once, with visibility conditions for switching lists

v0.1.0
- Initial release